添加权限判定功能

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        username: GameAdmin
-        password: 12345678
-        url: jdbc:mysql://localhost:3306/Game?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+        username: AuthDB
+        password: Auth123456
+        url: jdbc:mysql://localhost:3306/AuthControl?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 jpa:
     properties:
         hibernate:
