完成项目详情

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,8 @@ spring:
                     auto:create
 
 
+    resources:
+        static-locations=/resources/project
 server:
     port: 8080
     servlet:
